[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/HealthUI.gd" type="Script" id=1]
[ext_resource path="res://UI/HeartUIFull.png" type="Texture" id=2]
[ext_resource path="res://UI/HeartUIEmpty.png" type="Texture" id=3]
[ext_resource path="res://Menu/menu_theme.tres" type="Theme" id=4]

[node name="HealthUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 3 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="."]
margin_right = 15.0
margin_bottom = 11.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -8.0
margin_right = 8.0
margin_bottom = 14.0
size_flags_horizontal = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
pause_mode = 1
anchor_left = 0.5
anchor_right = 0.5
margin_left = 40.0
margin_top = -2.98023e-08
margin_right = 135.0
margin_bottom = 19.0
rect_rotation = -0.123098
theme = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="RichTextLabel"]
pause_mode = 1
wait_time = 0.1
autostart = true
[connection signal="timeout" from="RichTextLabel/Timer" to="." method="_on_Timer_timeout"]
